# alter-sales-api

./: .env.example  .env.production.example  .gitignore  DEPLOY_RENDER.md  README.md  pyproject.toml  render.yaml  run.bat  run_real.bat  run_render_sync.bat  run_render_sync_loop.bat  teste_com_senha.bat  teste_com_senha_linux.sh  teste_sem_senha.bat
app/: __init__.py  config.py  db.py  live_sales.py  logging_setup.py  main.py  schemas.py  security.py  service.py  storage.py
examples/: store-009-conjunto-nacional.json
scripts/: fetch_render_feeds.ps1  fetch_render_feeds_embedded.bat  fetch_render_feeds_embedded.ps1  fetch_render_feeds_portable.ps1  load_real_store_009.py  start_local_api.bat  test_render_api.bat  test_render_api.ps1  test_store_009_preview.ps1
