[project]
name = "alter-sales-api"
version = "0.1.0"
description = "API para publicar feed de vendas detalhadas da Bio Mundo para consumo externo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "loguru>=0.7.2"
]

[tool.uv]
package = false
